# blackcortex-gpt-cli

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  SECURITY.md  dev-requirements.txt  gpt.py  install.sh  package.json  pyproject.toml  requirements.txt  ruff.toml  setup.py  uninstall.sh
.github/workflows/: _lint.yml  _test.yml  check.yml  lint.yml  publish.yml
blackcortex_cli/: chat.py  commands.py  config.py  logging.py  main.py  memory.py  repl.py
blackcortex_cli/commands/: handlers.py
blackcortex_cli/config/: config.py  loader.py
blackcortex_cli/core/: chat.py
blackcortex_cli/flags/: flag_clear_history.py  flag_set_key.py  flag_uninstall.py  flag_update.py  flag_version.py
blackcortex_cli/logging/: manager.py
blackcortex_cli/memory/: context_memory.py
blackcortex_cli/utils/: formatting.py
core/: commands.py  config.py  memory.py
tests/: test_commands.py  test_commands_handlers.py  test_config_loader.py  test_core_chat.py  test_logging_manager.py  test_main.py  test_memory.py  test_memory_context_memory.py  test_repl.py  test_utils_formatting.py
tests/config/: test_config.py
tests/core/: test_chat_manager.py  test_context.py  test_context_memory.py  test_flag_registry.py  test_log_manager.py
tests/flags/: test_flag_clear_history.py  test_flag_clear_log.py  test_flag_clear_memory.py  test_flag_env.py  test_flag_log.py  test_flag_markdown.py  test_flag_ping.py  test_flag_set_key.py  test_flag_stream.py  test_flag_uninstall.py  test_flag_update.py  test_flag_version.py
tests/utils/: test_formatting.py  test_metadata.py
