[project]
name = "blackcortex-gpt-cli"
version = "1.2.1"
description = "Terminal-based GPT CLI with memory, markdown, and stream support"
keywords = ["gpt", "cli", "terminal", "openai"]
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Konijima", email = "konijima@blackcortex.net" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

# Core dependencies
dependencies = [
  "openai >=1.3.5,<2.0.0",
  "rich >=13.0.0,<14.0.0",
  "prompt_toolkit >=3.0.36,<4.0.0",
  "python-dotenv >=1.0.0,<2.0.0"
]

# Development-only dependencies
[project.optional-dependencies]
dev = [
  "pylint >=3.0.0,<4.0.0",
  "pytest >=7.4.0,<8.0.0",
  "build >=1.0.3,<2.0.0",
  "twine >=4.0.2,<5.0.0",
  "ruff >=0.3.0,<1.0.0",
  "pre-commit >=3.6.0,<4.0.0",
  "pytest-testdox >=3.0.0,<4.0.0"
]

# CLI entry point
[project.scripts]
gpt = "blackcortex_cli.gpt:main"

# Build system configuration
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

# If you rename core to blackcortex_cli, update here
[tool.setuptools]
packages = ["blackcortex_cli"]

[tool.ruff]
target-version = "py312"
line-length = 100
indent-width = 4
exclude = [
  ".git",
  ".venv",
  "dist",
  "build",
  "__pycache__",
]
preview = false

[tool.ruff.lint]
select = ["E", "F", "B", "I", "SIM", "UP", "C90"]
ignore = [
  "D100",    # Missing docstring in public module
  "D203",    # Conflicts with D211
  "D213",    # Conflicts with D212
  "S101",    # Allow use of `assert` in tests
  "CPY001",  # Copyright header not needed
  "INP001",  # Allow implicit namespace packages
  "ANN001", "ANN201",  # Missing type annotations
  "PTH118", "PTH123",  # pathlib enforcement
  "FURB101",           # force .read_text
  "UP015",             # Unnecessary open mode
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D100", "S101", "ANN001", "ANN201"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = 100
preview = false
